tmux: powerline variable changed in v3.1.0

--- a/software/tmux/.tmux.conf
+++ b/software/tmux/.tmux.conf
@@ -11,6 +11,7 @@ set -g status-interval 1
 set -g status-justify "centre"
 
 TMUX_POWERLINE_RCFILE="$HOME/.tmux/tmux-powerlinerc"
+TMUX_POWERLINE_CONFIG_FILE="$HOME/.tmux/tmux-powerlinerc"    # v3.1.0
 
 set -g status-bg colour2
 TMUX_POWERLINE_DEFAULT_BACKGROUND_COLOR=2
